--- a/curso.html
+++ b/curso.html
@@ -103,75 +103,66 @@
             </ul>
 
         </section>
-        <article class="Pago">
-            <h3 id="precios">Precio: $1800</h3>
-            <!-- <h3 class="desc1">Precio: $990</h3> -->
-            <!-- <h3 class="desc2">Precio: $1440</h3> -->
-            <!-- <h3 class="desc3">Precio: $3330</h3> -->
-            <div id="test" class='Pago__boton1 bot'>
-                <a mp-mode="dftl"
-                    href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=66480696-215434ca-a665-4ba9-af32-1d17323dbf79"
-                    name="MP-payButton">Pagar</a>
-            </div>
-            <div id="test1" class='Pago__boton2 bot'>
-                <a mp-mode="dftl"
-                    href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=66480696-215434ca-a665-4ba9-af32-1d17323dbf79"
-                    name="MP-payButton">Pagar2</a>
-            </div>
-            <div id="test2" class='Pago__boton3 bot'>
-                <a mp-mode="dftl"
-                    href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=66480696-215434ca-a665-4ba9-af32-1d17323dbf79"
-                    name="MP-payButton">Pagar3</a>
-            </div>
-            <div id="test3" class='Pago__boton4 bot'>
-                <a mp-mode="dftl"
-                    href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=66480696-215434ca-a665-4ba9-af32-1d17323dbf79"
-                    name="MP-payButton">Pagar4</a>
-            </div>
-            <script type="text/javascript">
-                (function () { function $MPC_load() { window.$MPC_loaded !== true && (function () { var s = document.createElement("script"); s.type = "text/javascript"; s.async = true; s.src = document.location.protocol + "//secure.mlstatic.com/mptools/render.js"; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); window.$MPC_loaded = true; })(); } window.$MPC_loaded !== true ? (window.attachEvent ? window.attachEvent('onload', $MPC_load) : window.addEventListener('load', $MPC_load, false)) : null; })();
-            </script>
+        <section class="Pago">
+            <div class="Pago__box">
+                <h3 class="precios">$2700</h3>
+                <del>$3300</del> <span>15% desc por inscripción antes del 30/05/20</span>
+                <h4>PAGÁ EN 3 CUOTAS SIN INTERÉS</h4>
+                <!-- <h3 class="desc1">Precio: $990</h3> -->
+                <!-- <h3 class="desc2">Precio: $1440</h3> -->
+                <!-- <h3 class="desc3">Precio: $3330</h3> -->
 
-            <h4>Descuentos. Escoja los que aplique</h4>
-            <form>
-                <input class="pagoCheckbox" type="checkbox" id="vehicle1" name="vehicle1" value="x">
-                <label for="vehicle1">Estudiante 15%</label><br>
-                <input class="pagoCheckbox" type="checkbox" id="vehicle2" name="vehicle2" value="x">
-                <label for="vehicle2">UNNOBA 15%</label><br>
-                <input class="pagoCheckbox" type="checkbox" id="vehicle3" name="vehicle3" value="x">
-                <label for="vehicle3">Antes del 30/4 15%</label>
-                <input id="testt" class="pagoCheckbox" type="button" value="Aplicar descuentos" onclick="foo();">
-            </form>
-            <!-- <script>
-                     const Modal = document.getElementsByClassName("Moo")[0];
-                     const Modal2 = document.getElementsByClassName("Moo2")[0];
-                     const Modal3 = document.getElementsByClassName("Moo3")[0];
-    
-                     function foo() {                     
-                        var checkedValue = [];
-                        var inputElements = document.getElementsByClassName('Curso__checkbox');
-                        for (var i = 0; inputElements[i]; ++i) {
-                            if (inputElements[i].checked) {
-                                checkedValue.push(inputElements[i].value)
-                                // break;
-                            }
-                        }
-                        if (checkedValue.length == 1) {
-                            Modal.style.display = "none";
-                            
-                        }
-                        else if(checkedValue.length == 2) {
-                            Modal2.style.display = "none";
-                        }
-                        else if(checkedValue.length == 3) {
-                            Modal3.style.display = "none";
-                        }
-                    }
-                    // function foo() {                     
-                    //     Modal.style.display = "none";
-                    // }
-                </script> -->
-        </article>
+
+                <div class="Pago__boton">
+                    <div id="test" class='Pago__boton1 bot'>
+                        <a mp-mode="dftl"
+                            href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=66480696-215434ca-a665-4ba9-af32-1d17323dbf79"
+                            name="MP-payButton">Pagar</a>
+                    </div>
+                    <div id="test1" class='Pago__boton2 bot'>
+                        <a mp-mode="dftl"
+                            href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=66480696-215434ca-a665-4ba9-af32-1d17323dbf79"
+                            name="MP-payButton">Pagar2</a>
+                    </div>
+                    <div id="test2" class='Pago__boton3 bot'>
+                        <a mp-mode="dftl"
+                            href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=66480696-215434ca-a665-4ba9-af32-1d17323dbf79"
+                            name="MP-payButton">Pagar3</a>
+                    </div>
+                    <div id="test3" class='Pago__boton4 bot'>
+                        <a mp-mode="dftl"
+                            href="https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=66480696-215434ca-a665-4ba9-af32-1d17323dbf79"
+                            name="MP-payButton">Inscribirse4</a>
+                    </div>
+                    <script type="text/javascript">
+                        (function () { function $MPC_load() { window.$MPC_loaded !== true && (function () { var s = document.createElement("script"); s.type = "text/javascript"; s.async = true; s.src = document.location.protocol + "//secure.mlstatic.com/mptools/render.js"; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); window.$MPC_loaded = true; })(); } window.$MPC_loaded !== true ? (window.attachEvent ? window.attachEvent('onload', $MPC_load) : window.addEventListener('load', $MPC_load, false)) : null; })();
+                    </script>
+                </div>
+
+                <div class="Pago__descuentos">
+                    <h5>OTROS DESCUENTOS<br><span>Elegí los que aplique</span></h5>
+                    <form>
+                        <label class="Pago_boxcheck" for="opcion1">Estudiante 15%
+                            <input class="pagoCheckbox" type="checkbox" id="opcion1">
+                            <span class="Pago__checkmark"></span>
+                        </label>
+                        <label class="Pago_boxcheck" for="opcion2">UNNOBA 15%
+                            <input class="pagoCheckbox" type="checkbox" id="opcion2">
+                            <span class="Pago__checkmark"></span>
+                        </label>
+                        <label class="Pago_boxcheck" for="opcion3">Antes del 30/4 15%
+                            <input class="pagoCheckbox" type="checkbox" id="opcion3">
+                            <span class="Pago__checkmark"></span>
+                        </label>
+                        <input id="testt" class="pagoCheckbox Pago__boton-desc" type="button" value="Aplicar descuentos"
+                            onclick="foo();">  <span class="precios Pago__precio">$2700</span>
+
+                    </form>
+                </div>
+
+            </div>
+
+        </section>
     </main>
     <footer class="Footer">
         <section class="Footer-copy">
