add responsive menu

--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@
             <img src="images/logo.png" alt="logo cursosIT">
         </figure>
         <nav class="Header__nav">
+            <label for="menu" class="Header__button">
+                <div></div>
+                <div></div>
+                <div></div>
+            </label>
+            <input type="checkbox" class="Header__check" id="menu">
+
             <ul class="Header__menu">
-                <li class="Header__menu-li"><a href="" class="Header__menu-a">HOME</a></li>
+                <li class="Header__menu-li">
+                    <a href="index.html" class="Header__menu-a">HOME</a>
+                </li>
                 <li class="Header__menu-li Header__open-submenu">
                     <a href="" class="Header__menu-a">CURSOS</a>
                     <ul class="Header__submenu">
@@ -24,6 +33,9 @@
                         <li class="Header__submenu-li"><a class="Header__submenu-a" href="">NODEJS</a></li>
                         <li class="Header__submenu-li"><a class="Header__submenu-a" href="">TODOS</a></li>
                     </ul>
+                </li>
+                <li class="Header__menu-li">
+                    <a href="blog.html" class="Header__menu-a">BLOG</a>
                 </li>
                 <li class="Header__menu-li opencontact"><a href="#" class="Header__menu-a">CONTACTO</a></li>
             </ul>
