--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CursosIT</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
@@ -46,7 +47,8 @@
             <div class="Slide__js">
                 <div class="Slides__slide Slides--1">
                     <div class="Slides__header">
-                        <h2>PRÓXIMO CURSO <span>DESARROLLO WEB CON</span></h2>
+                        <h2>PRÓXIMO CURSO</h2> 
+                        <p>DESARROLLO WEB CON</p>
                     </div>
                     <div class="Slides__body">
                         <h3>HTML<span class="icon-html5"></span></h3>
@@ -159,7 +161,7 @@
                             <p>&#10003; Características</p>
                             <p>Comienza 6 de junio</p>
                             <p>Inscripciones abiertas</p>
-                            <a href="curso-html-css-js.html" class="Articulos__button">VER CURSO</a>
+                            <a href="curso.html" class="Articulos__button">VER CURSO</a>
                         </div>
                     </div>
                     <figure>
@@ -348,8 +350,8 @@
         <nav class="Footer-nav">
             <ul>
                 <li class="opencontact2"><a href="javascript:void(0)">contacto</a></li>
-                <li><a href="#">cursos</a></li>
-                <li><a href="#">blog</a></li>
+                <li><a href="curso.html">cursos</a></li>
+                <li><a href="blog.html">blog</a></li>
             </ul>
         </nav> 
         <section class="Footer-social">
