add content in blog links & start blog page

--- a/index.html
+++ b/index.html
@@ -204,42 +204,50 @@
                         <!-- capa que aparece al hacer hover azul mas claro -->
                         <div class="Articulos__texto">
                             <!-- efecto de arriba hacia abajo -->
-                            <p>reseña</p>
-                            <p>&#10003; Temario</p>
-                            <p>&#10003; Video</p>
-                            <p>&#10003; Características</p>
-                            <p>Comienza 6 de junio</p>
-                            <p>Inscripciones abiertas</p>
-                            <a href="curso-html-css-js.html" class="Articulos__button">VER CURSO</a>
+                            <p>15/5/20</p>
+                            <br>
+                            <!-- <p>Slack es una herramienta de comunicación en equipo que trabaja con un 
+                                simple sistema de canales según el tema de conversación.</p> -->
+                            <p>Descubre para que sirve Slack y los beneficios de trabajar en equipo con esta herramienta</p>
+                            <a href="curso-html-css-js.html" class="Articulos__button">ENTRAR</a>
                         </div>
                     </div>
                     <figure>
-                        <img src="img/cursolinkHTML-CSS-JS.png" alt="">
-                        <h3>articulo</h3>
+                        <img src="img/slack-blog.png" alt="">
+                        <h3>¿Qué es SLACK?</h3>
                     </figure>
                 </article>
                 <article>
                     <div class="Articulos__layerHover">
                         <div class="Articulos__texto">
-                            <p>PROXIMAMENTE</p>
+                            <p>15/5/20</p>
+                            <br>
+                            <p>22 atajos y utilidades de Visual Studio Code para simplificarte la vida.</p>
+                            <a href="curso-html-css-js.html" class="Articulos__button">ENTRAR</a>
                             <!-- <a href="#" class="button">VER CURSO</a> -->
                         </div>
                     </div>
                     <figure>
-                        <img src="img/cursolinkWpk-hbs-sass.png" alt="">
-                        <h3>articulo</h3>
+                        <img src="img/vsc-blog.png" alt="">
+                        <h3>Visual Studio Code <br>SHORTCUTS</h3>
                     </figure>
                 </article>
                 <article>
                     <div class="Articulos__layerHover">
                         <div class="Articulos__texto">
-                            <p>PROXIMAMENTE</p>
+                            <p>15/5/20</p>
+                            <br>
+                            <p>Creá una Página web colgada en Internet en 10 minutos con:</p>
+                            <p>&#10003; Html, CSS, JS</p>
+                            <p>&#10003; Visual Studio Code</p>
+                            <p>&#10003; Git y Github</p>
+                            <a href="curso-html-css-js.html" class="Articulos__button">ENTRAR</a>
                             <!-- <a href="article1.html" class="button">VER CURSO</a> -->
                         </div>
                     </div>
                     <figure>
-                        <img src="img/cursolinkNode-mdb-exp.png" alt="">
-                        <h3>articulo</h3>
+                        <img src="img/hola-mundo-blog.gif" alt="">
+                        <h3>Hola Mundo! <br> HTML CSS Javascript</h3>
                     </figure>
                 </article>
             </div>
