--- a/curso.html
+++ b/curso.html
@@ -37,7 +37,7 @@
                     </ul>
                 </li>
                 <li class="Header__menu-li">
-                    <a href="blog.html" class="Header__menu-a">BLOG</a>
+                    <a href="index.html#section1" class="Header__menu-a">BLOG</a>
                 </li>
                 <li class="Header__menu-li opencontact"><a href="#" class="Header__menu-a">CONTACTO</a></li>
             </ul>
