--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                 <li class="Header__menu-li Header__open-submenu">
                     <a href="" class="Header__menu-a">CURSOS</a>
                     <ul class="Header__submenu">
-                        <li class="Header__submenu-li"><a class="Header__submenu-a" href="">HTML,CSS,JS</a></li>
+                        <li class="Header__submenu-li"><a class="Header__submenu-a" href="curso.html">HTML,CSS,JS</a></li>
                         <li class="Header__submenu-li"><a class="Header__submenu-a" href="">WEBPACK</a></li>
                         <li class="Header__submenu-li"><a class="Header__submenu-a" href="">NODEJS</a></li>
                         <li class="Header__submenu-li"><a class="Header__submenu-a" href="">TODOS</a></li>
                     </ul>
                 </li>
                 <li class="Header__menu-li">
-                    <a href="blog.html" class="Header__menu-a">BLOG</a>
+                    <a href="#section1" class="Header__menu-a">BLOG</a>
                 </li>
                 <li class="Header__menu-li opencontact"><a href="#" class="Header__menu-a">CONTACTO</a></li>
             </ul>
@@ -195,7 +195,7 @@
                 </article>
             </div>
         </section>
-        <section class="Articulos Articulos--blog">
+        <section id="section1" class="Articulos Articulos--blog">
             <h2 class="Articulos__title">Blog</h2>
             <div class="Articulos__links">
                 <article>
@@ -209,7 +209,7 @@
                             <!-- <p>Slack es una herramienta de comunicación en equipo que trabaja con un 
                                 simple sistema de canales según el tema de conversación.</p> -->
                             <p>Descubre para que sirve Slack y los beneficios de trabajar en equipo con esta herramienta</p>
-                            <a href="curso-html-css-js.html" class="Articulos__button">ENTRAR</a>
+                            <a href="blogSlack.html" class="Articulos__button">ENTRAR</a>
                         </div>
                     </div>
                     <figure>
@@ -223,7 +223,7 @@
                             <p>15/5/20</p>
                             <br>
                             <p>22 atajos y utilidades de Visual Studio Code para simplificarte la vida.</p>
-                            <a href="curso-html-css-js.html" class="Articulos__button">ENTRAR</a>
+                            <a href="blogVSCode.html" class="Articulos__button">ENTRAR</a>
                             <!-- <a href="#" class="button">VER CURSO</a> -->
                         </div>
                     </div>
