--- a/blogSlack.html
+++ b/blogSlack.html
@@ -38,16 +38,22 @@
                     <a href="index.html" class="Header__menu-a">HOME</a>
                 </li>
                 <li class="Header__menu-li Header__open-submenu">
-                    <a href="" class="Header__menu-a">CURSOS</a>
+                    <a href="" class="Header__menu-a no-link">CURSOS</a>
                     <ul class="Header__submenu">
-                        <li class="Header__submenu-li"><a class="Header__submenu-a" href="">HTML,CSS,JS</a></li>
-                        <li class="Header__submenu-li"><a class="Header__submenu-a" href="">WEBPACK</a></li>
-                        <li class="Header__submenu-li"><a class="Header__submenu-a" href="">NODEJS</a></li>
-                        <li class="Header__submenu-li"><a class="Header__submenu-a" href="">TODOS</a></li>
+                        <li class="Header__submenu-li"><a class="Header__submenu-a" href="curso.html">HTML,CSS,JS</a></li>
+                        <li class="Header__submenu-li title">
+                            <a class="Header__submenu-a no-link" href="">WEBPACK</a>
+                            <span class="titletext">PROXIMAMENTE</span>
+                        </li>
+                        <li class="Header__submenu-li title">
+                            <a class="Header__submenu-a no-link" href="">NODEJS</a>
+                            <span class="titletext">PROXIMAMENTE</span>
+                        </li>
+                        <li class="Header__submenu-li"><a class="Header__submenu-a" href="index.html#scrollLink1">TODOS</a></li>
                     </ul>
                 </li>
                 <li class="Header__menu-li">
-                    <a href="blog.html" class="Header__menu-a">BLOG</a>
+                    <a href="index.html#section1" class="Header__menu-a">BLOG</a>
                 </li>
                 <li class="Header__menu-li opencontact"><a href="#" class="Header__menu-a">CONTACTO</a></li>
             </ul>
