test link hover article1

--- a/curso.html
+++ b/curso.html
@@ -194,8 +194,8 @@
         <nav class="Footer-nav">
             <ul>
                 <li class="opencontact2"><a href="javascript:void(0)">contacto</a></li>
-                <li><a href="curso.html">cursos</a></li>
-                <li><a href="blog.html">blog</a></li>
+                <li><a href="index.html#scrollLink1">cursos</a></li>
+                <li><a href="index.html#section1">blog</a></li>
             </ul>
         </nav> 
         <section class="Footer-social">
