--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                     sitios web
                 </p>
             </article>
+            <a href="curso.html" class="button button--inf button--blue">VER CURSO</a>
         </section>
 
         <section class="Features">
@@ -149,7 +150,8 @@
                 <h4>Soporte</h4>
                 <p>Permanente en redes y aulas virtuales</p>
             </article>
-            <article>
+            <a href="curso.html" class="button button--inf button--blue">VER CURSO</a>
+            
         </section>
 
         <section id="scrollLink1" class="Articulos">
@@ -157,7 +159,7 @@
             <div class="Articulos__links">
                 <article>
                     <!-- position relative para posisionar absolute al hijo     width-->
-                    <div class="Articulos__layerHover">
+                    <div class="Articulos__layerHover" onclick="location.href='curso.html';">
                         <!-- capa que aparece al hacer hover azul mas claro -->
                         <div class="Articulos__texto">
                             <!-- efecto de arriba hacia abajo -->
@@ -364,8 +366,8 @@
         <nav class="Footer-nav">
             <ul>
                 <li class="opencontact2"><a href="javascript:void(0)">contacto</a></li>
-                <li><a href="curso.html">cursos</a></li>
-                <li><a href="blog.html">blog</a></li>
+                <li><a href="#scrollLink1">cursos</a></li>
+                <li><a href="#section1">blog</a></li>
             </ul>
         </nav> 
         <section class="Footer-social">
