--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                             <p>&#10003; Html, CSS, JS</p>
                             <p>&#10003; Visual Studio Code</p>
                             <p>&#10003; Git y Github</p>
-                            <a href="curso-html-css-js.html" class="Articulos__button">ENTRAR</a>
+                            <a href="blogHolaMundo.html" class="Articulos__button">ENTRAR</a>
                             <!-- <a href="article1.html" class="button">VER CURSO</a> -->
                         </div>
                     </div>
