update disqus all posts

--- a/blogVSCode.html
+++ b/blogVSCode.html
@@ -270,7 +270,8 @@
                 <h3>Más atajos</h3>
                 <br>
                 <a href="https://code.visualstudio.com/shortcuts/keyboard-shortcuts-macos.pdf">Emmet</a>
-                <span class="nota">Emmet es una extensión que ya viene instalada y muchos atajos corresponden a esta extensión.</span class="nota">
+                <span class="nota">Emmet es una extensión que ya viene instalada y muchos atajos corresponden a esta
+                    extensión.</span class="nota">
                 <br>
                 <a href="https://code.visualstudio.com/shortcuts/keyboard-shortcuts-macos.pdf">Visual Studio Code
                     macOS</a>
@@ -279,27 +280,32 @@
                     Windows</a>
                 <br>
             </div>
+            <br>
+            <br>
+            <br>
+            <br>
             <div id="disqus_thread"></div>
-<script>
+            <script>
 
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+                /**
+                *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
-var disqus_config = function () {
-this.page.url = "https://agustinpfs.github.io/CIT2/";  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
+                var disqus_config = function () {
+                    this.page.url = "https://agustinpfs.github.io/CIT2/blogVSCode.html";  // Replace PAGE_URL with your page's canonical URL variable
+                    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                };
 
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://cursos-it.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                       
+                (function () { // DON'T EDIT BELOW THIS LINE
+                    var d = document, s = d.createElement('script');
+                    s.src = 'https://cursos-it.disqus.com/embed.js';
+                    s.setAttribute('data-timestamp', +new Date());
+                    (d.head || d.body).appendChild(s);
+                })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered
+                    by Disqus.</a></noscript>
+
         </article>
     </main>
     <aside class="Aside">
@@ -413,8 +419,10 @@ s.setAttribute('data-timestamp', +new Date());
     <div class="Modal">
         <!-- Modal content -->
         <div class="Modal-content">
-            <form class="contact_form" action="https://getsimpleform.com/messages?form_api_token=e8ec1ae526c6c428f948668873550fb7" method="post" name="contact_form">
-                <input type='hidden' name='redirect_to' value='https://github.com/agustinpfs'/>
+            <form class="contact_form"
+                action="https://getsimpleform.com/messages?form_api_token=e8ec1ae526c6c428f948668873550fb7"
+                method="post" name="contact_form">
+                <input type='hidden' name='redirect_to' value='https://github.com/agustinpfs' />
 
                 <input name="nombre" type="text" placeholder="Tu nombre" required>
                 <input name="email" type="email" placeholder="Tu email" required>
