--- a/blogSlack.html
+++ b/blogSlack.html
@@ -112,7 +112,7 @@
                 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
                 var disqus_config = function () {
-                    this.page.url = "https://agustinpfs.github.io/CIT2/blogVSCode.html";  // Replace PAGE_URL with your page's canonical URL variable
+                    this.page.url = "https://agustinpfs.github.io/CIT2/blogSlack.html";  // Replace PAGE_URL with your page's canonical URL variable
                     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
                 };
 
