--- a/blogHolaMundo.html
+++ b/blogHolaMundo.html
@@ -159,7 +159,9 @@
                     <p>Añadimos la etiqueta main con todo su contenido dentro de la etiqueta body.</p>
 
                 </div>
-                <script src="https://gist.github.com/agustinpfs/a50fb09cd1cdc7af4c5bb29e89c58e70.js"></script>
+                <!-- <iframe src="https://www.google.com/" frameborder="0"></iframe> -->
+                <iframe src="https://gist.github.com/agustinpfs/a50fb09cd1cdc7af4c5bb29e89c58e70.pibb"></iframe>
+                <!-- <script src="https://gist.github.com/agustinpfs/a50fb09cd1cdc7af4c5bb29e89c58e70.js"></script> -->
                 <h4>10- Guardamos el documento - botón derecho sobre la carpeta del proyecto y “Open in Terminal”
                 </h4>
                 <div>
