--- a/blogSlack.html
+++ b/blogSlack.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
 
-    <style>
+    <!-- <style>
         article{
             width: 800px;
         }
@@ -18,7 +18,7 @@
             display: block;
         } */
     
-    </style>
+    </style> -->
 </head>
 <body>
     <header class="Header">
@@ -125,7 +125,6 @@
             </script>
             <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered
                     by Disqus.</a></noscript>
-
 
         </article>
     </main>
