--- a/blogVSCode.html
+++ b/blogVSCode.html
@@ -110,7 +110,7 @@
                     <p>macOS:</p>
                     <code>cmd</code> <code>Alt</code> <code>flecha arriba o abajo</code>
                     <figure>
-                        <img style="height: 350px; min-width: 680px;" src="img/mult-curs-colum.gif" alt="">
+                        <img width="95%" src="img/mult-curs-colum.gif" alt="">
                     </figure>
                 </div>
                 <h3>7- Seleccionar línea entera</h3>
