--- a/blogHolaMundo.html
+++ b/blogHolaMundo.html
@@ -160,7 +160,8 @@
 
                 </div>
                 <!-- <iframe src="https://www.google.com/" frameborder="0"></iframe> -->
-                <iframe src="https://gist.github.com/agustinpfs/a50fb09cd1cdc7af4c5bb29e89c58e70.pibb"></iframe>
+
+                <div class="container"><iframe class="responsive-iframe" src="https://gist.github.com/agustinpfs/a50fb09cd1cdc7af4c5bb29e89c58e70.pibb"></iframe></div>
                 <!-- <script src="https://gist.github.com/agustinpfs/a50fb09cd1cdc7af4c5bb29e89c58e70.js"></script> -->
                 <h4>10- Guardamos el documento - botón derecho sobre la carpeta del proyecto y “Open in Terminal”
                 </h4>
