responsive articles solved

--- a/blogHolaMundo.html
+++ b/blogHolaMundo.html
@@ -10,16 +10,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
 
-    <style>
-        article {
-            width: 800px;
-        }
-
-        /* span{
-            margin-left: auto;
-            display: block;
-        } */
-    </style>
+   
 </head>
 
 <body>
@@ -159,10 +150,8 @@
                     <p>Añadimos la etiqueta main con todo su contenido dentro de la etiqueta body.</p>
 
                 </div>
-                <!-- <iframe src="https://www.google.com/" frameborder="0"></iframe> -->
-
-                <div class="container"><iframe class="responsive-iframe" src="https://gist.github.com/agustinpfs/a50fb09cd1cdc7af4c5bb29e89c58e70.pibb"></iframe></div>
-                <!-- <script src="https://gist.github.com/agustinpfs/a50fb09cd1cdc7af4c5bb29e89c58e70.js"></script> -->
+              
+                <script src="https://gist.github.com/agustinpfs/a50fb09cd1cdc7af4c5bb29e89c58e70.js"></script>
                 <h4>10- Guardamos el documento - botón derecho sobre la carpeta del proyecto y “Open in Terminal”
                 </h4>
                 <div>
